Feat: Refine exception handler and swagger statements